fix: Resolve Vercel deployment configuration issues
- Fix vercel.json to remove conflicting builds/functions properties
- Add encryption key generator for secure private ledger
- Update .env.example with proper encryption keys
- Simplify Vercel configuration for better compatibility
- Add buildCommand and outputDirectory for cleaner deployment

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@ IBM_REGION=https://eu-de.ml.cloud.ibm.com
 GRANITE_MODEL_ID=ibm/granite-3-8b-instruct
 
 # Private Ledger Configuration
-# Change these to secure values in production
-PRIVATE_LEDGER_SALT=changeme
-PRIVATE_LEDGER_ENC_KEY=your_encryption_key_here
+# Generate secure keys using: python generate_encryption_key.py
+PRIVATE_LEDGER_SALT=cyhaJROT8R01Y3/UI01eqsAzivyuBU2UPUNHqJvsdVo=
+PRIVATE_LEDGER_ENC_KEY=KDtN9CXfaxNJmCG4XqLIljMKSbKyWA3p7hiOom3-UhI=
