--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ cryptography>=40.0.0
 scikit-learn>=1.3.0
 joblib>=1.3.0
 reportlab>=4.0.0
+statsmodels>=0.14.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.17.0
